--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -10,6 +10,15 @@ body {
     font-family: 'Voltaire', sans-serif;
 }
 
+hr {
+    color: black;
+    height: 5px;
+    background-color: black;
+    opacity: 1;
+    margin: 3%;
+    width: 100%;
+}
+
 h1 {
     font-size: 1.8rem;
 }
@@ -19,17 +28,11 @@ h2 {
 }
 
 /* Set aside to the left */
-.left {
-    
-    width: 30%;
-    
-}
+
+/* Set drinks to the right */
 
 /* Line divider */
-hr {
-    width: 100vw;
-    margin: 1rem 0rem;
-} 
+
 
 #drinkHistory ul {
     list-style-type: none;
@@ -43,3 +46,10 @@ hr {
     margin: 1%;
 }
 
+@media screen {
+    
+}
+
+@media screen {
+    
+}
