--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -1,15 +1,16 @@
 * {
     margin: 0;
-    text-align: center;
+    /* text-align: center; */
 }
 
 body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    margin: 0;
+    /* justify-content: center;
+    align-items: center; */
     font-family: 'Voltaire', sans-serif;
 }
 
+/* Line divider */
 hr {
     color: black;
     height: 5px;
@@ -19,21 +20,32 @@ hr {
     width: 100%;
 }
 
+.card {
+    margin: 2%;
+    width: 50%;
+    /* Hide card shadows on startup */
+    /* display: none; */
+}
+
+#drinkName, #drinkName1, #drinkName2, #drinkName3, #drinkName4, #drinkName5 {
+    font-size: 300%;
+}
+#ingredients, #ingredients1, #ingredients2, #ingredients3, #ingredients4, #ingredients5 {
+    text-align: center;
+}
+
 h1 {
     font-size: 1.8rem;
 }
 
 h2 {
     font-size: 2rem;
+    padding: 0rem 1rem;
 }
 
-/* Set aside to the left */
-
-/* Set drinks to the right */
-
-/* Line divider */
-
-
+#product, form {
+    padding: 0rem 1rem;
+}
 #drinkHistory ul {
     list-style-type: none;
     flex-direction: column;
@@ -46,10 +58,3 @@ h2 {
     margin: 1%;
 }
 
-@media screen {
-    
-}
-
-@media screen {
-    
-}
