--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -1,12 +1,14 @@
+:root {
+    --main-bg-color: #aeaced
+    --secondary-color: 
+}
+
 * {
     margin: 0;
     /* text-align: center; */
 }
 
 body {
-    margin: 0;
-    /* justify-content: center;
-    align-items: center; */
     font-family: 'Voltaire', sans-serif;
 }
 
@@ -21,25 +23,26 @@ hr {
 }
 
 .card {
-    margin: 2%;
-    width: 50%;
+    
+    width: 60%;
     /* Hide card shadows on startup */
     /* display: none; */
 }
 
-.instructions {
-    padding: 0 5%;
+#instructions, #instructions1, #instructions2, #instructions3, #instructions4, #instructions5 {
+    padding: 0 3%;
 }
 #drinkName, #drinkName1, #drinkName2, #drinkName3, #drinkName4, #drinkName5 {
     font-size: 300%;
-    margin: 2%;
+    margin: 0 0 0 3%;
 }
 #ingredients, #ingredients1, #ingredients2, #ingredients3, #ingredients4, #ingredients5 {
     text-align: center;
+    padding: 0 0 5% 0;
 }
 
 img {
-    padding: 3% 3%;
+    padding: 0 3%;
 }
 
 h1 {
@@ -58,7 +61,6 @@ h2 {
     list-style-type: none;
     flex-direction: column;
 }
-
 #drinkHistory button {
     align-items: center;
     font-size: 80%;
