--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -1,6 +1,7 @@
 /* CSS variables */
-
-:root {}
+:root {
+    
+}
 
 * {
     margin: 0;
@@ -11,6 +12,10 @@ body {
     font-family: 'Voltaire', sans-serif;
 }
 
+header {
+    text-align: right;
+    padding-right: 1%;
+}
 
 /* Line divider */
 
@@ -36,16 +41,27 @@ h2 {
     padding: 0rem 1rem;
 }
 
-.card {
-    width: 50%;
-}
-
 #results {
     display: none;
 }
 
 #results2 {
     display: none;
+}
+
+.middle {
+    width: 60%;
+}
+
+.flex {
+    display: flex;
+    justify-content: right;
+    align-items: right;
+    flex-direction: column;
+}
+
+.card {
+    width: 50%;
 }
 
 .instructions {
@@ -60,6 +76,19 @@ h2 {
 #drinkName5 {
     font-size: 300%;
     margin: 0 0 0 3%;
+    position: relative;
+}
+
+/* First one needs 1% more top */
+#instructions {
+    padding: 1% 3% 0 3%
+}
+#instructions1,
+#instructions2,
+#instructions3,
+#instructions4,
+#instructions5 {
+    padding: 0 3% 0 3%
 }
 
 #ingredients,
