--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -1,4 +1,5 @@
 /* CSS variables */
+
 :root {
     --main-bg-color: #1481BA;
     --secondary-color: #0CAADC;
@@ -34,7 +35,9 @@ aside {
     position: fixed;
 }
 
+
 /* Line divider */
+
 hr {
     color: black;
     height: 5px;
@@ -61,7 +64,9 @@ aside {
     margin-left: 4%;
 }
 
+
 /* Adjust input bar to fit in-line with clearBtn */
+
 input {
     width: 300px;
     border-radius: .5rem;
@@ -78,6 +83,7 @@ input {
     display: none;
 }
 
+
 /* .flex {
     display: flex;
     justify-content: right;
@@ -85,14 +91,18 @@ input {
     flex-direction: column;
 } */
 
+
 /* Drink Cards Width */
+
 .card {
     width: 60%;
     background-color: var(--dark);
     color: var(--light);
 }
 
+
 /* Drink titles styling */
+
 #drinkName,
 #drinkName1,
 #drinkName2,
@@ -105,10 +115,13 @@ input {
     position: relative;
 }
 
+
 /* First result needs 1% more top padding to match */
+
 #instructions {
     padding: 1% 3% 0 3%
 }
+
 #instructions1,
 #instructions2,
 #instructions3,
@@ -117,7 +130,9 @@ input {
     padding: 0 3% 0 3%
 }
 
+
 /* Center alignment and bottom padding of ingredients list */
+
 #ingredients,
 #ingredients1,
 #ingredients2,
@@ -128,20 +143,26 @@ input {
     padding: 0 0 5% 0;
 }
 
+
 /* Fixed padding for product and form */
+
 .is-one-fourth,
 #product,
 form {
     padding: 0 2%;
 }
 
+
 /* Hide bullet points of drinkHistory */
+
 #drinkHistory ul {
     list-style-type: none;
     flex-direction: column;
 }
 
+
 /* Styling of drinkHistory button */
+
 #drinkHistory button {
     font-family: 'Voltaire', sans-serif;
     font-size: 1.5rem;
@@ -161,32 +182,42 @@ form {
     color: var(--light);
 }
 
+
 /* Search btn styling */
+
 #search {
     border-radius: 1rem;
 }
+
 #search:hover {
     background-color: var(--dark);
     color: var(--light);
 }
 
+
 /* Clear btn styling */
+
 #clear {
     border-radius: 1rem;
     background-color: var(--contrast);
     height: auto
 }
+
 #clear:hover {
     background-color: var(--main-bg-color);
     color: var(--light);
 }
 
+
 /* Header span class */
+
 #anon {
     color: var(--dark);
 }
 
+
 /* Alcohol span class */
+
 #alc {
     color: var(--contrast);
 }
@@ -199,7 +230,6 @@ form {
     input {
         width: 100%;
     }
-    
     h2 {
         font-size: 150%;
     }
@@ -215,16 +245,35 @@ form {
     h2 {
         font-size: 140%;
     }
-    
 }
 
 @media screen and (max-width: 768px) {
     html {
         background-color: var(--dark);
     }
+    form {
+        display: flex;
+        flex-direction: column;
+    }
+    form button {
+        width: 75%;
+    }
     input {
-        width: 100%;
+        width: 75%;
+    }
+    hr {
+        width: 75%;
+    }
+    #drinkHistory button {
+        width: 70%;
     }
     .card {
+        width: 70%;
+    }
+    #results {
+        margin-left: 15%;
+    }
+    aside {
+        position: relative;
     }
 }
