--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -240,7 +240,7 @@ form {
 
 @media screen and (max-width: 1040px) {
     h2 {
-        font-size: 150%;
+        font-size: 140%;
     }
 }
 
@@ -250,7 +250,7 @@ form {
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 320px) and (max-width: 768px) {
     html {
         background-color: var(--dark);
     }
@@ -268,6 +268,14 @@ form {
     hr {
         margin: 1% 0 0 0;
         width: 75%;
+    }
+    #drinkName,
+    #drinkName1,
+    #drinkName2,
+    #drinkName3,
+    #drinkName4,
+    #drinkName5 {
+        font-size: 200%;
     }
     #drinkHistory button {
         width: 70%;
